[metadata]
name = rover
description = rover description
author = Cal Poly Rover Team
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = 
    rover
install_requires =
    numpy>=1.21
    pyserial>=3.5
    Adafruit-Blinka>=6.15.0
    adafruit-circuitpython-fxas21002c>=2.1.11
    adafruit-circuitpython-fxos8700>=2.1.10
    gps>=3.19
python_requires = >= 3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
rover = py.typed

[flake8]
max-line-length = 160